[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/FreePixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/EndScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.643137, 0.643137, 0.643137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -120.0
margin_right = 112.0
margin_bottom = -56.0
custom_fonts/font = SubResource( 1 )
text = "You die"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScores" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -52.0
margin_right = 64.0
margin_bottom = -4.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "12000"
align = 1
valign = 1

[node name="ButtonMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = 104.0
margin_right = 38.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 3 )
text = "Menu"

[node name="ButtonRestart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = 48.0
margin_right = 62.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
[connection signal="pressed" from="ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
